[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyRevizto"
version = "0.2"
description = "pyRevizto is a library designed specifically for Python developers who work with Revizto, a popular platform for BIM collaboration and issue tracking. By leveraging pyRevizto, developers can streamline their workflows and significantly enhance the capabilities of Revizto through automation."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Umar Khalid" }
]
keywords = ["Revizto"]
dependencies = [
    "requests>=2.28.2",
    "python-dotenv>=1.0.1"
]

[tool.setuptools.packages.find]
where = ["pyrevizto"]